<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:padding="20dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ImgLogomarca"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:contentDescription="@string/img_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_gorjeta"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/TxtTituloPedido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/txt_titulo_dados_pedido"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ImgLogomarca" />

    <TextView
        android:id="@+id/TxtInfoPedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/txt_valor_pedido"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TxtTituloPedido" />

    <EditText
        android:id="@+id/InputValorPedido"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/inp_valor_pedido"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textAlignment="textEnd"
        android:textColorHint="#757575"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.972"
        app:layout_constraintStart_toEndOf="@+id/TxtInfoPedido"
        app:layout_constraintTop_toBottomOf="@+id/TxtTituloPedido" />

    <TextView
        android:id="@+id/TxtTituloValoresAdicionais"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/txt_titulo_valores_adicionais"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TxtInfoPedido" />

    <TextView
        android:id="@+id/TxtInfoGorjeta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/txt_percentual_gorjeta"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TxtTituloValoresAdicionais" />

    <SeekBar
        android:id="@+id/SeekbarPercentualGorjeta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:max="30"
        android:progress="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toEndOf="@+id/TxtInfoGorjeta"
        app:layout_constraintTop_toBottomOf="@+id/TxtTituloValoresAdicionais" />

    <TextView
        android:id="@+id/TxtTituloTotal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/txt_titulo_totalizador"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TxtInfoGorjeta" />

    <TextView
        android:id="@+id/TxtInfoTotalPedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/txt_valor_total_pedido"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TxtTituloTotal" />

    <TextView
        android:id="@+id/TxtResultadoTotalPedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/txt_res_valor_total_pedido"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/TxtInfoTotalPedido"
        app:layout_constraintTop_toBottomOf="@+id/TxtTituloTotal" />

    <TextView
        android:id="@+id/TxtInfoTotalGorjeta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/txt_valor_total_gorjeta"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TxtInfoTotalPedido" />

    <TextView
        android:id="@+id/TxtResultadoTotalGorjeta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/txt_res_valor_total_pedido"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/TxtInfoTotalGorjeta"
        app:layout_constraintTop_toBottomOf="@+id/TxtResultadoTotalPedido" />

    <TextView
        android:id="@+id/TxtInfoTotalGeral"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/txt_valor_total_geral"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TxtInfoTotalGorjeta" />

    <TextView
        android:id="@+id/TxtResultadoTotalGeral"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/txt_res_valor_total_pedido"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/TxtInfoTotalGeral"
        app:layout_constraintTop_toBottomOf="@+id/TxtResultadoTotalGorjeta" />

</androidx.constraintlayout.widget.ConstraintLayout>